--- a/template/admin/profile.html
+++ b/template/admin/profile.html
@@ -1,75 +1,62 @@
-
 {% include 'admin/header.html' %}
 <body id="page-top">
     <div id="wrapper">
         {% include 'admin/navbar.html' %}
         <div class="d-flex flex-column" id="content-wrapper">
             <div id="content">
-                <nav class="navbar navbar-expand bg-white shadow mb-4 topbar">
-                    <div class="container-fluid"><button class="btn btn-link d-md-none rounded-circle me-3" id="sidebarToggleTop" type="button"><i class="fas fa-bars"></i></button>
-                        <form class="d-none d-sm-inline-block me-auto ms-md-3 my-2 my-md-0 mw-100 navbar-search">
-                            <div class="input-group"><input class="bg-light form-control border-0 small" type="text" placeholder="Search for ..."><button class="btn btn-primary py-0" type="button"><i class="fas fa-search"></i></button></div>
-                        </form>
-                        <ul class="navbar-nav flex-nowrap ms-auto">
-                            <li class="nav-item dropdown d-sm-none no-arrow"><a class="dropdown-toggle nav-link" aria-expanded="false" data-bs-toggle="dropdown" href="#"><i class="fas fa-search"></i></a>
-                                <div class="dropdown-menu dropdown-menu-end p-3 animated--grow-in" aria-labelledby="searchDropdown">
-                                    <form class="me-auto navbar-search w-100">
-                                        <div class="input-group"><input class="bg-light border-0 form-control small" type="text" placeholder="Search for ..."><button class="btn btn-primary" type="button"><i class="fas fa-search"></i></button></div>
-                                    </form>
-                                </div>
-                            </li>
-                            <div class="d-none d-sm-block topbar-divider"></div>
-                            <li class="nav-item dropdown no-arrow">
-                                <div class="nav-item dropdown no-arrow"><a class="dropdown-toggle nav-link" aria-expanded="false" data-bs-toggle="dropdown" href="#"><span class="d-none d-lg-inline me-2 text-gray-600 small">Valerie Luna</span></a>
-                                    <div class="dropdown-menu shadow dropdown-menu-end animated--grow-in"><a class="dropdown-item" href="#"><i class="fas fa-user fa-sm fa-fw me-2 text-gray-400"></i>&nbsp;Profile</a><a class="dropdown-item" href="#"><i class="fas fa-cogs fa-sm fa-fw me-2 text-gray-400"></i>&nbsp;Settings</a><a class="dropdown-item" href="#"><i class="fas fa-list fa-sm fa-fw me-2 text-gray-400"></i>&nbsp;Activity log</a>
-                                        <div class="dropdown-divider"></div><a class="dropdown-item" href="#"><i class="fas fa-sign-out-alt fa-sm fa-fw me-2 text-gray-400"></i>&nbsp;Logout</a>
-                                    </div>
-                                </div>
-                            </li>
-                        </ul>
-                    </div>
-                </nav>
                 <div class="container-fluid">
                     <h3 class="text-dark mb-4">Profile</h3>
-                            <div class="row">
-                                <div class="col">
-                                    <div class="card shadow mb-3">
-                                        <div class="card-header py-3">
-                                            <p class="text-primary m-0 fw-bold">User Settings</p>
+                    <div class="row">
+                        <div class="col-lg-8">
+                            <div class="card shadow mb-3">
+                                <div class="card-header py-3">
+                                    <p class="text-primary m-0 fw-bold">User Settings</p>
+                                </div>
+                                <div class="card-body">
+                                    <form id="profileForm" method="post">
+                                        <div class="row">
+                                            <div class="col-md-6">
+                                                <div class="mb-3"><label class="form-label" for="voornaam"><strong>First Name</strong></label><input class="form-control" type="text" id="voornaam" placeholder="John" name="voornaam" value="{{ beheerder.voornaam }}" readonly></div>
+                                            </div>
+                                            <div class="col-md-6">
+                                                <div class="mb-3"><label class="form-label" for="achternaam"><strong>Last Name</strong></label><input class="form-control" type="text" id="achternaam" placeholder="Doe" name="achternaam" value="{{ beheerder.achternaam }}" readonly></div>
+                                            </div>
                                         </div>
-                                        <div class="card-body">
-                                            <form>
-                                                <div class="row">
-                                                    <div class="col">
-                                                        <div class="mb-3"><label class="form-label" for="first_name"><strong>First Name</strong></label><input class="form-control" type="text" id="first_name" placeholder="John" name="first_name"></div>
-                                                    </div>
-                                                    <div class="col">
-                                                        <div class="mb-3"><label class="form-label" for="last_name"><strong>Last Name</strong></label><input class="form-control" type="text" id="last_name" placeholder="Doe" name="last_name"></div>
-                                                    </div>
-                                                </div>
-                                                <div class="row">
-                                                    <div class="col">
-                                                        <div class="mb-3"><label class="form-label" for="email"><strong>Email Address</strong></label><input class="form-control" type="email" id="email" placeholder="user@example.com" name="email"></div>
-                                                    </div>
-                                                    <div class="col">
-                                                        <div class="mb-3"><label class="form-label" for="last_name"><strong>Password</strong></label><input class="form-control" type="text" id="password" placeholder="********" name="Password"></div>
-                                                    </div>
-                                                </div>
-                                                <div class="mb-3"><button class="btn btn-primary btn-sm" type="submit">Save Settings</button></div>
-                                            </form>
+                                        <div class="row">
+                                            <div class="col">
+                                                <div class="mb-3"><label class="form-label" for="email"><strong>Email Address</strong></label><input class="form-control" type="email" id="email" placeholder="user@example.com" name="email" value="{{ beheerder.emailadres }}" readonly></div>
+                                            </div>
                                         </div>
-                                    </div>
+                                        <div class="mb-3"><button class="btn btn-primary btn-sm" type="button" id="editProfileBtn">Edit Profile</button></div>
+                                    </form>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="card shadow mb-5"></div>
                 </div>
             </div>
+            {% include 'admin/footer.html' %}
         </div>
-        {% include 'admin/footer.html' %}
-        </div><a class="border rounded d-inline scroll-to-top" href="#page-top"><i class="fas fa-angle-up"></i></a>
     </div>
-</body>
+    <script src="{{ url_for('static', filename='bootstrap/js/bootstrap.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/theme.js') }}"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script>
+        $(document).ready(function() {
+            let editMode = false;
 
+            $('#editProfileBtn').click(function() {
+                editMode = !editMode;
+                if (editMode) {
+                    $(this).text('Save Changes');
+                    $('input').prop('readonly', false);
+                } else {
+                    $(this).text('Edit Profile');
+                    $('input').prop('readonly', true);
+                    $('#profileForm').submit();
+                }
+            });
+        });
+    </script>
+</body>
 </html>
