--- a/template/user/home.html
+++ b/template/user/home.html
@@ -19,7 +19,7 @@
         <h1>Welcome to the Application</h1>
         <div class="links">
             <a href="{{ url_for('login') }}" class="btn">Login</a>
-            <a href="{{ url_for('register_bp.register') }}" class="btn">Register</a>
+            <a href="{{ url_for('register') }}" class="btn">Register</a>
         </div>
     </section>
 </body>
