--- a/template/user/register.html
+++ b/template/user/register.html
@@ -17,7 +17,7 @@
     </header>
     <section class="register-form">
         <h1>Register as Ervaringsdeskundige</h1>
-        <form action="{{ url_for('register_bp.register') }}" method="POST">
+        <form action="{{ url_for('register') }}" method="POST">
             <input type="text" name="voornaam" placeholder="First Name" required>
             <input type="text" name="achternaam" placeholder="Last Name" required>
             <input type="text" name="postcode" placeholder="Postal Code" required>
