--- a/template/admin/navbar.html
+++ b/template/admin/navbar.html
@@ -12,6 +12,7 @@
             <li class="nav-item"><a class="nav-link" href="{{ url_for('admin_index') }}"><i class="fas fa-tachometer-alt"></i><span>Dashboard</span></a></li>
             <li class="nav-item"><a class="nav-link" href="{{ url_for('profile') }}"><i class="fas fa-user"></i><span>Profile</span></a></li>
             <li class="nav-item"><a class="nav-link" href="{{ url_for('accounts') }}"><i class="fas fa-table"></i><span>Account</span></a></li>
+            <li class="nav-item"><a class="nav-link" href="{{ url_for('pending') }}"><i class="fas fa-table"></i><span>Pending</span></a></li>
         </ul>
         <div class="text-center d-none d-md-inline"><button class="btn rounded-circle border-0" id="sidebarToggle" type="button"></button></div>
     </div>
